--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /Fifo-and-Pipes/cmake-build-debug/
+/.idea/.name
+/.idea/C-Posix-Operating-Systems.iml
+/.idea/editor.xml
+/.idea/material_theme_project_new.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.vscode/settings.json
+/.idea/vcs.xml
